--- a/Assets/game.css
+++ b/Assets/game.css
@@ -38,7 +38,7 @@ body {
 }
 
 .incorrect {
-    background: linear-gradient(32deg, rgba(230, 29, 29. 1) 0%, rgba(224, 11, 11, 1) 100%);
+    background: linear-gradient(32deg, rgba(230, 29, 29, 1) 0%, rgba(224, 11, 11, 1) 100%);
 
 }
 
@@ -73,6 +73,12 @@ body {
     height: 100%;
     background: rgb(11, 223, 36);
     width: 0%;
+}
+
+#count {
+    font-size: 2rem;
+    padding-right: 5rem
+
 }
 
 @media screen and (max-width: 768px) {
